--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ layout: default
             
 {% include experience.html %}
             
-{% include courses.html %}
+<!--{% include courses.html %}-->
