--- a/index.html
+++ b/index.html
@@ -1,23 +1,87 @@
 ---
 layout: default
+title: Home
 ---
-<div class="container">
-  {% include header.html %}
-  <div class="container-block">
-    <div class="sidebar">
-      {% include contact.html %}
-      {% include languages.html %}
-      {% include education.html %}
-      {% include skills.html %}
-      {% include fork.html %}
+<main class="h-full text-slate-900 dark:text-slate-200 bg-gradient-to-t from-slate-300 to-slate-100 dark:from-slate-900 dark:to-slate-800 dark:bg-slate-700 py-6">
+  <div class="mx-auto page max-w-screen-xl print:max-w-a4 md:max-w-a4 md:h-a4 xsm:p-8 sm:p-9 md:p-10 bg-slate-200 dark:bg-slate-800">
+    <!-- Name -->
+    <header class="flex items-center mb-8 md:mb-11">
+      <div class="initials-container mr-5 text-base leading-none text-white bg-slate-700 font-medium print:bg-black px-3" style="padding-bottom: 0.6875rem; padding-top: 0.6875rem; /*11px*/">
+        <div class="initial text-center" style="padding-bottom: 0.1875rem; /*3px*/">IMJ</div>
+      </div>
+      <h1 class="text-2xl font-semibold text-slate-750 pb-px">
+        {{ site.title }}
+      </h1>
+    </header>
+    <!-- end Name -->
+    <!-- Column -->
+    <div class="md:columns-2 print:columns-2 gap-8 md:h-a4-col print:h-a4-col col-fill-auto">
+      <!--  about -->
+      <!-- Contact -->
+      <section class="mt-8 first:mt-0">
+        <div class="break-inside-avoid">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+            Contato
+          </h2>
+          {% include contact.html %}
+        </div>
+      </section>
+      <!-- Experience -->
+      <section class="mt-8 first:mt-0">
+        <div class="break-inside-avoid">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+            Experiência profissional
+          </h2>
+        {% include experience.html %}
+        </div>
+      </section>
+      <section class="mt-8 first:mt-0">
+        <!-- To keep in the same column -->
+        <div class="break-inside-avoid">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+            Formação acadêmica
+          </h2>
+        {% include education.html %}
+        </div>
+      </section>
+      <section class="mt-8 first:mt-0">
+        <!-- To keep in the same column -->
+        <div class="break-inside-avoid">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+            Serviço Voluntário
+          </h2>
+          {% include volunteering.html %}
+        </div>
+      </section>
+      <section class="mt-8 first:mt-0">
+        <!-- To keep in the same column -->
+        <div class="break-inside-avoid">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+            Projetos
+          </h2>
+         {% include projects.html %}
+        </div>
+      </section>
+      <section class="mt-8 first:mt-0">
+        <!-- To keep in the same column -->
+        <div class="break-inside-avoid">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+            Skills
+          </h2>
+          {% include skills.html %}
+        </div>
+      </section>
     </div>
-
-    <div class="main">
-      {% include career-profile.html %}
-      {% include experience.html %}
-      {% include publications.html %}
-      {% include projects.html %}
-      {% include volunteering.html %}
-    </div>
+    <!-- end Column -->
   </div>
-</div>
+  <div class="fixed bottom-5 left-5 print:hidden">
+    <button id="theme-toggle" @click="toggleTheme" type="button" class="border-0 text-slate-500 dark:text-slate-400 hover:bg-slate-200 dark:hover:bg-slate-700 focus:outline-none rounded-full text-sm p-2 w-14 h-14 dark:bg-slate-800 cursor-pointer">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-full" viewBox="0 0 20 20" fill="currentColor" x-show="!isDark">
+        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
+      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-full" viewBox="0 0 20 20" fill="currentColor" x-show="isDark">
+        <path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd" />
+      </svg>
+    </button>
+  </div>
+</main>
