--- a/404.html
+++ b/404.html
@@ -9,4 +9,5 @@ title: "404: Page not found"
         <p class="my-2  text-slate-500">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.</p>
         <a href="{{site.url}}" class="rounded-full bg-slate-300 dark:bg-slate-700 dark:text-slate-500 px-4 py-2">Inicial</a>
     </div>
+    {% include toggle-theme.html %}
 </main>
