--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@ title: Home
         <!-- To keep in the same column -->
         <div class="break-inside-avoid">
           <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+            Eventos
+          </h2>
+          {% include events.html %}
+        </div>
+      </section>
+      <section class="mt-8 first:mt-0">
+        <!-- To keep in the same column -->
+        <div class="break-inside-avoid">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
             Skills
           </h2>
           {% include skills.html %}
