--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@ title: Home
         {% include education.html %}
         </div>
       </section>
-      <section class="mt-8 first:mt-0">
-        <!-- To keep in the same column -->
-        <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
-            Serviço Voluntário
-          </h2>
-          {% include volunteering.html %}
-        </div>
-      </section>
+<!--      <section class="mt-8 first:mt-0">-->
+<!--        &lt;!&ndash; To keep in the same column &ndash;&gt;-->
+<!--        <div class="break-inside-avoid">-->
+<!--          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">-->
+<!--            Serviço Voluntário-->
+<!--          </h2>-->
+<!--          {% include volunteering.html %}-->
+<!--        </div>-->
+<!--      </section>-->
       <section class="mt-8 first:mt-0">
         <!-- To keep in the same column -->
         <div class="break-inside-avoid">
