--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 layout: default
 title: Home
 ---
-<main class="h-full text-slate-900 dark:text-slate-200 bg-gradient-to-t from-slate-300 to-slate-100 dark:from-slate-900 dark:to-slate-800 dark:bg-slate-700 py-6">
-  <div class="mx-auto page max-w-screen-xl print:max-w-a4 md:max-w-a4 md:h-a4 xsm:p-8 sm:p-9 md:p-10 bg-slate-200 dark:bg-slate-800">
+<main class="h-full text-slate-900 dark:text-slate-200 bg-gradient-to-t from-slate-300 to-slate-100 dark:from-slate-900 dark:to-slate-800 dark:bg-slate-700 md:py-6">
+  <div class="mx-auto page max-w-screen-xl print:max-w-a4 md:max-w-a4 md:h-a4 xsm:p-8 sm:p-9 md:p-10 bg-slate-200 dark:bg-slate-800 p-6 md:p-0">
     <!-- Name -->
     <header class="flex items-center mb-8 md:mb-11">
-      <div class="initials-container mr-5 text-base leading-none text-white bg-slate-700 font-medium print:bg-black px-3" style="padding-bottom: 0.6875rem; padding-top: 0.6875rem; /*11px*/">
+      <div class="initials-container mr-5 text-base leading-none text-white bg-slate-700 font-medium print:bg-black print:border print:border-slate-100 px-3" style="padding-bottom: 0.6875rem; padding-top: 0.6875rem; /*11px*/">
         <div class="initial text-center" style="padding-bottom: 0.1875rem; /*3px*/">IMJ</div>
       </div>
-      <h1 class="text-2xl font-semibold text-slate-750 pb-px">
+      <h1 class="text-2xl font-semibold text-slate-700 dark:text-slate-500 pb-px">
         {{ site.title }}
       </h1>
     </header>
     <!-- end Name -->
     <!-- Column -->
-    <div class="md:columns-2 print:columns-2 gap-8 md:h-a4-col print:h-a4-col col-fill-auto">
+    <div class="md:columns-2 print:columns-1 gap-8 md:h-a4-col print:h-a4-col col-fill-auto">
       <!--  about -->
       <!-- Contact -->
       <section class="mt-8 first:mt-0">
         <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">
             Contato
           </h2>
           {% include contact.html %}
@@ -29,7 +29,7 @@ title: Home
       <!-- Experience -->
       <section class="mt-8 first:mt-0">
         <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">
             Experiência profissional
           </h2>
         {% include experience.html %}
@@ -38,7 +38,7 @@ title: Home
       <section class="mt-8 first:mt-0">
         <!-- To keep in the same column -->
         <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">
             Formação acadêmica
           </h2>
         {% include education.html %}
@@ -47,7 +47,7 @@ title: Home
 <!--      <section class="mt-8 first:mt-0">-->
 <!--        &lt;!&ndash; To keep in the same column &ndash;&gt;-->
 <!--        <div class="break-inside-avoid">-->
-<!--          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">-->
+<!--          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">-->
 <!--            Serviço Voluntário-->
 <!--          </h2>-->
 <!--          {% include volunteering.html %}-->
@@ -56,7 +56,7 @@ title: Home
       <section class="mt-8 first:mt-0">
         <!-- To keep in the same column -->
         <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">
             Projetos
           </h2>
          {% include projects.html %}
@@ -65,7 +65,7 @@ title: Home
       <section class="mt-8 first:mt-0">
         <!-- To keep in the same column -->
         <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">
             Eventos
           </h2>
           {% include events.html %}
@@ -74,7 +74,7 @@ title: Home
       <section class="mt-8 first:mt-0">
         <!-- To keep in the same column -->
         <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 print:font-normal uppercase">
+          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">
             Skills
           </h2>
           {% include skills.html %}
