Update education and remove certified

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@ title: Home
           {% include skills.html %}
         </div>
       </section>
-      <section class="mt-8 first:mt-0">
-        <!-- To keep in the same column -->
-        <div class="break-inside-avoid">
-          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">
-            Certificação
-          </h2>
-          {% include certificates.html %}
-        </div>
-      </section>
+<!--      <section class="mt-8 first:mt-0">-->
+<!--        &lt;!&ndash; To keep in the same column &ndash;&gt;-->
+<!--        <div class="break-inside-avoid">-->
+<!--          <h2 class="mb-4 font-bold tracking-widest text-sm2 text-slate-700 dark:text-slate-300 uppercase">-->
+<!--            Certificação-->
+<!--          </h2>-->
+<!--          {% include certificates.html %}-->
+<!--        </div>-->
+<!--      </section>-->
     </div>
     <!-- end Column -->
   </div>
